# lem-in

./: .gitignore  2map  34.txt  CMakeLists.txt  Makefile  building_way.c  building_way2.c  cheack_ways.c  cheak_rooms.c  check_links.c  check_links2.c  copy.c  ds  ex.sh  flipping.c  g_help.c  get_next_line.c  get_next_line.h  help.c  help1.c  inter2.c  lem-in  lemin.h  logfile.out  loop.sh  loop_ants.c  m3  main.c  map  move_ants.c  move_ants2.c  my.sh  next_main.c  next_main2.c  start_end.c  start_end2.c  way.c
libft/: Makefile  ft_coun_in_w.c  ft_putchar.c  ft_strjoin.c
maps/: algo_4.txt
